--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyNewApp</title>
+  <title>Listar Series</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<div class="container-fluid">
+  <div class="row" style="background-color: rgb(21, 150, 209);">
+      <div class="col-4">
+          <img src="https://1.bp.blogspot.com/-Imo1tXpleSs/U2rY8uzqXuI/AAAAAAAAK3s/7f42CQuPs5U/s1600/free_desktop_wallpaper_logo_tv_series_1024x768.gif" height="70px" width="120px" alt="Logo">
+      </div>
+      <div class="col-8">
+          <h1> TV Series </h1>
+      </div>
+  </div>
 <body>
   <app-root></app-root>
 </body>
